--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,16 @@
 <!--  sidebar-->
+
 <div class= "d-flex">
 
-<div class="bg-dark border-right p-3" id= "sidebar" >
-  <h3 class=" text-light">Giff app</h3>
-  <hr class = "text-white"/>
-  <div class = "list-group list-reset">
-    <a href="#" class="list-group-item-action">
-      Dasboard
-    </a>
-    <a href="#" class="list-group-item-action">
-    Dasboard
-  </a>
+<app-sidebar></app-sidebar>
+
+</div>
+
+<div class="container">
+  <div class="row p-3"></div>
+  <div class="col">
+    <div class="tab">
+      mundo
+    </div>
   </div>
 </div>
-<!-- end sidebar-->
-<div>
-  mundo
-</div>
-</div>
-
-
