--- a/shared/shared/sidebar/sidebar.component.html
+++ b/shared/shared/sidebar/sidebar.component.html
@@ -1,11 +1,14 @@
-<div class="bg-dark border-right p-3" id= "sidebar" >
+<div class="bg-dark border-right p-8" id= "sidebar" >
 <h3 class=" text-light">Giff app</h3>
   <hr class = "text-white"/>
   <div class = "list-group list-reset">
+
     <a href="#" class="list-group-item-action">
       Dasboard
     </a>     
     <a href="#" class="list-group-item-action">
     Dasboard
-  </a>
- 
+
+    </a>
+  </div>
+</div>
