--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,8 @@
 <!--  sidebar-->
 
 <div class= "d-flex">
-
 <app-sidebar></app-sidebar>
-
 </div>
 
-<div class="container">
-  <div class="row p-3"></div>
-  <div class="col">
-    <div class="tab">
-      mundo
-    </div>
-  </div>
-</div>
+<div>mundo</div>
+
